--- a/app/docker-compose.dev.yml
+++ b/app/docker-compose.dev.yml
@@ -12,6 +12,7 @@ services:
     # está operacional, antes de liberar o container
     healthcheck:
       test: ["CMD", "lsof", "-t", "-i:3000"]  # Caso utilize outra porta interna para o front, altere ela aqui também
+      interval: 5s
       timeout: 10s
       retries: 5
   backend:
@@ -37,6 +38,7 @@ services:
       - DB_PORT=3306
     healthcheck:
       test: ["CMD", "lsof", "-t", "-i:3001"] # Caso utilize outra porta interna para o back, altere ela aqui também
+      interval: 5s
       timeout: 10s
       retries: 5
   db:
@@ -50,6 +52,7 @@ services:
     restart: 'always'
     healthcheck:
       test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"] # Deve aguardar o banco ficar operacional
+      interval: 5s
       timeout: 10s
       retries: 5
     cap_add:
